TO REVERT: dummy replace all lagged regressor values (to find real regressors)

--- a/docs/zh/模型概述.md
+++ b/docs/zh/模型概述.md
@@ -8,7 +8,7 @@ NeuralProphet是一个基于神经网络的PyTorch实现的面向从业者的用
 
 ## 时间序列部分
 
-NeuralProphet是一个可分解的时间序列模型，其组成部分有趋势(trend)、季节性(seasonality)、自回归(auto-regression)、特殊事件(special events)、未来回归项(future regressors)和滞后回归项(lagged regressors)。未来回归因子是指在预测期有已知未来值的外部变量，而滞后回归因子是指那些只有观察期值的外部变量。趋势可以通过使用变化点来建立线性或逐个线性趋势的模型。季节性使用傅里叶项建模，因此可以处理高频率数据的多种季节性。自动回归使用[AR-Net](https://github.com/ourownstory/AR-Net)的实现来处理，这是一个用于时间序列的自回归前馈神经网络(Auto-Regressive Feed-Forward Neural Network)。滞后回归因子也使用单独的前馈神经网络进行建模。未来回归项和特殊事件都是作为模型的协变量，用专用系数进行建模。更多细节，请参考各个部分的文档。
+NeuralProphet是一个可分解的时间序列模型，其组成部分有趋势(trend)、季节性(seasonality)、自回归(auto-regression)、特殊事件(special events)、未来回归项(future regressors)和滞后回归项(dcawdawcs)。未来回归因子是指在预测期有已知未来值的外部变量，而滞后回归因子是指那些只有观察期值的外部变量。趋势可以通过使用变化点来建立线性或逐个线性趋势的模型。季节性使用傅里叶项建模，因此可以处理高频率数据的多种季节性。自动回归使用[AR-Net](https://github.com/ourownstory/AR-Net)的实现来处理，这是一个用于时间序列的自回归前馈神经网络(Auto-Regressive Feed-Forward Neural Network)。滞后回归因子也使用单独的前馈神经网络进行建模。未来回归项和特殊事件都是作为模型的协变量，用专用系数进行建模。更多细节，请参考各个部分的文档。
 
 ## 数据预处理
 
