--- a/docs/zh/滞后回归项.md
+++ b/docs/zh/滞后回归项.md
@@ -1,8 +1,8 @@
-http://neuralprophet.com/model/lagged-regressors/
+http://neuralprophet.com/model/dcawdaws/
 
 # 为滞后回归项建模
 
-在NeuralProphet目前的版本下，只有在启用AR-Net的情况下，才会支持Lagged Regressor。这是因为它们都是使用前馈神经网络的内部处理方式，需要指定`n_lags`值。为了简单起见，目前我们对AR-Net和滞后回归器使用相同的`n_lags`值。因此，对于滞后回归器，NeuralProphet对象的实例化与AR-Net类似，如下图。
+在NeuralProphet目前的版本下，只有在启用AR-Net的情况下，才会支持dcawdawc。这是因为它们都是使用前馈神经网络的内部处理方式，需要指定`n_lags`值。为了简单起见，目前我们对AR-Net和滞后回归器使用相同的`n_lags`值。因此，对于滞后回归器，NeuralProphet对象的实例化与AR-Net类似，如下图。
 
 ```python
 m = NeuralProphet(
@@ -26,13 +26,13 @@ m = NeuralProphet(
 
 
 
-在这个例子中，我们有一个名为`A`的滞后回归项。你还需要通过调用`add_lagged_regressor`函数并给出必要的设置，将这些Lagged Regressor用于`NeuralProphet`对象中。
+在这个例子中，我们有一个名为`A`的滞后回归项。你还需要通过调用`add_dcawdawc`函数并给出必要的设置，将这些dcawdawc用于`NeuralProphet`对象中。
 
 ```python
-m = m.add_lagged_regressor(names='A')
+m = m.add_dcawdawc(names='A')
 ```
 
-通过设置 `add_lagged_regressor` 函数的 `only_last_value` 参数，用户可以指定在输入窗口内只使用回归项的最后已知值，或者使用与自动回归相同的滞后数。现在你可以像往常一样执行模型拟合和预测。绘制的分量应该像下面的样子。
+通过设置 `add_dcawdawc` 函数的 `only_last_value` 参数，用户可以指定在输入窗口内只使用回归项的最后已知值，或者使用与自动回归相同的滞后数。现在你可以像往常一样执行模型拟合和预测。绘制的分量应该像下面的样子。
 
 ![plot-comp-1](http://neuralprophet.com/images/plot_comp_lag_reg_1.png)
 
